####### kdevelop will overwrite this part!!! (begin)##########
EXTRA_DIST = driver.cpp driver.h eg8.txt peg01.h peg02.h peg03.h peg04.h peg05.h peg06.h peg07.h peg08.h peg09.h peg10.h peg11.h peg12.h peg13.h peg14.h peg15.h peg16.h squaring.h eg3.res test-6.out test.out Makefile.am 
####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
noinst_PROGRAMS = glucat

# set the include path found by configure
glucat_INCLUDES = $(all_includes)
# the library search path.
LDFLAGS =
glucat_LDFLAGS = $(all_libraries)

glucat_SOURCES = driver.cpp
glucat_LDADD = $(LDADD)
glucat_DEPENDENCIES = driver.h peg01.h peg02.h peg03.h peg04.h peg05.h peg06.h peg07.h peg08.h peg09.h peg10.h peg11.h peg12.h peg13.h peg14.h peg15.h peg16.h squaring.h
